Assert failure in GPU compositor denoise node #117171

Closed
opened 2024-01-16 15:50:08 +01:00 by Sergey Sharybin · 0 comments

System Information
Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M2 Ultra 1.2

Blender Version
Broken: version: 4.1.0 Alpha,

Short description of error

When using debug build the following assert failure happens:

BLI_assert failed: source/blender/gpu/intern/gpu_texture.cc:548, GPU_texture_read(), at 'GPU_texture_usage(tex_) & GPU_TEXTURE_USAGE_HOST_READ'
  The host-read usage flag must be specified up-front. Only textures which require data reads should be flagged, allowing the backend to make certain optimisations.

Somehow seems to be related to EXR input data, as I didn't seem to be able to reproduce the issue with Jpeg (perhaps float vs. byte input format).

Exact steps for others to reproduce the error

Open attached .blend file and make it composite on GPU.

**System Information** Operating system: macOS-14.2.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M2 Ultra 1.2 **Blender Version** Broken: version: 4.1.0 Alpha, **Short description of error** When using debug build the following assert failure happens: ``` BLI_assert failed: source/blender/gpu/intern/gpu_texture.cc:548, GPU_texture_read(), at 'GPU_texture_usage(tex_) & GPU_TEXTURE_USAGE_HOST_READ' The host-read usage flag must be specified up-front. Only textures which require data reads should be flagged, allowing the backend to make certain optimisations. ``` Somehow seems to be related to EXR input data, as I didn't seem to be able to reproduce the issue with Jpeg (perhaps float vs. byte input format). **Exact steps for others to reproduce the error** Open attached .blend file and make it composite on GPU.
Sergey Sharybin added the
Priority
Normal
Status
Confirmed
Type
Bug
Module
VFX & Video
labels 2024-01-16 15:50:39 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-17 13:48:28 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117171
No description provided.